--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet">
     <title>React Starter</title>
+    <base href="/">
 </head>
 <style>
     body {
